--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "minecraft-launcher-lib>=7.1",
     "packaging>=25.0",
     "platformdirs>=4.3.8",
